src/objects/Account/fields/CustomFieldSept__c.field-meta.xml
<CustomField>
    <fullName>CustomFieldSept__c</fullName>
    <label>CustomFieldSept</label>
    <length>18</length>
    <type>Text</type>
</CustomField>