src/objects/Account/fields/DeleteBy890__c.field-meta.xml
<CustomField>
    <fullName>DeleteBy890__c</fullName>
    <label>DeleteBy890</label>
    <type>TextArea</type>
</CustomField>