src/objects/Account/fields/Global_Picklist_swap__c.field-meta.xml
<CustomField>
    <fullName>Global_Picklist_swap__c</fullName>
    <label>Global Picklist swap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>testGlobal14April</valueSetName>
    </valueSet>
</CustomField>