src/objects/Account/fields/hotfix__c.field-meta.xml
<CustomField>
    <fullName>hotfix__c</fullName>
    <label>hotfix</label>
    <length>34</length>
    <required>true</required>
    <type>Text</type>
</CustomField>