src/objects/Account/fields/NewlyAdded__c.field-meta.xml
<CustomField>
    <fullName>NewlyAdded__c</fullName>
    <label>NewlyAdded</label>
    <length>123</length>
    <type>Text</type>
</CustomField>