src/objects/Account/fields/Post1__c.field-meta.xml
<CustomField>
    <fullName>Post1__c</fullName>
    <label>Post1</label>
    <length>12</length>
    <type>Text</type>
</CustomField>