src/objects/Account/fields/Post2__c.field-meta.xml
<CustomField>
    <fullName>Post2__c</fullName>
    <label>Post2</label>
    <length>13</length>
    <type>Text</type>
</CustomField>