src/objects/Account/fields/same2__c.field-meta.xml
<CustomField>
    <fullName>same2__c</fullName>
    <label>same2</label>
    <length>14</length>
    <type>Text</type>
</CustomField>