src/objects/Account/fields/same__c.field-meta.xml
<CustomField>
    <fullName>same__c</fullName>
    <label>same</label>
    <length>10</length>
    <type>Text</type>
</CustomField>