src/objects/Account/fields/Standard_Picklist_swap__c.field-meta.xml
<CustomField>
    <fullName>Standard_Picklist_swap__c</fullName>
    <label>Standard Picklist swap</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>no</fullName>
            </value>
            <value>
                <fullName>nothing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>