src/objects/Account/fields/TestMultiselectPicklistValue__c.field-meta.xml
<CustomField>
    <fullName>TestMultiselectPicklistValue__c</fullName>
    <label>TestMultiselectPicklistValue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
            </value>
            <value>
                <fullName>truuu</fullName>
            </value>
            <value>
                <fullName>falllss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>