src/objects/Account/fields/TestPR2__c.field-meta.xml
<CustomField>
    <fullName>TestPR2__c</fullName>
    <description>PR 1. Pr 2 created from Opsera</description>
    <label>TestPR2</label>
    <length>12</length>
    <type>Text</type>
</CustomField>