src/objects/Account/fields/TestPR__c.field-meta.xml
<CustomField>
    <fullName>TestPR__c</fullName>
    <description>PR no 1. adding changes to create PR 2</description>
    <label>TestPR</label>
    <length>15</length>
    <type>Text</type>
</CustomField>