src/objects/Account/fields/TestStandardValueSet__c.field-meta.xml
<CustomField>
    <fullName>TestStandardValueSet__c</fullName>
    <label>TestStandardValueSet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dagad</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>