src/objects/Account/fields/ToDelete20Feb1__c.field-meta.xml
<CustomField>
    <fullName>ToDelete20Feb1__c</fullName>
    <description>To delete test eaton</description>
    <label>ToDelete20Feb1</label>
    <length>45</length>
    <type>Text</type>
</CustomField>