src/objects/Account/fields/ToDelete__c.field-meta.xml
<CustomField>
    <fullName>ToDelete__c</fullName>
    <label>ToDelete</label>
    <length>27</length>
    <type>Text</type>
</CustomField>