src/objects/Account/recordTypes/RecordTypeSwap.recordType-meta.xml
<RecordType>
    <fullName>RecordTypeSwap</fullName>
    <active>true</active>
    <label>RecordTypeSwap</label>
</RecordType>