src/objects/Account/validationRules/Check_Company_name_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Company_name_Value</fullName>
    <active>false</active>
    <description>Throws an exception message if the company id contains non-numerics</description>
    <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
    <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
    <errorMessage>CompanyId should be a numeric value</errorMessage>
</ValidationRule>